# rules_typescript

./: BUILD.bazel  README.md  WORKSPACE  package-lock.json  package.json
examples/angular/: BUILD.bazel
examples/angular/hello-world/: BUILD.bazel  hello-world.component.scss
examples/angularjs/: BUILD.bazel  package-lock.json  package.json
examples/closure_compiled/: BUILD.bazel  declarations.d.ts  package.json
examples/generated_ts/: BUILD.bazel  consume-stuff-angular-ts-library.ts  stuff_service.proto
internal/: BUILD.bazel  build_defs.bzl
internal/common/: compilation.bzl
internal/tsc_wrapped/: cache.ts  tsc_wrapped.ts
tools/taze/: BUILD.bazel  README.rst
tools/taze/config/: config.go  constants.go  directives.go  directives_test.go  platform.go
tools/taze/merger/: BUILD.bazel  fix.go  fix_test.go  merger.go  merger_test.go
tools/taze/resolve/: BUILD.bazel  labeler.go  labeler_test.go  resolve.go  resolve_external_test.go  resolve_node_module.go  resolve_node_module_test.go  resolve_test.go
tools/taze/resolve/internal/gen_std_package_list/: BUILD.bazel  gen_std_package_list.go
tools/taze/rules/: BUILD.bazel  construct.go  generator.go  generator_test.go
tools/taze/taze/: BUILD.bazel  diff.go  fix.go  fix_test.go  integration_test.go  main.go  print.go
