package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_binary")
load("//examples/angularjs:closure_ts_binary.bzl", "closure_ts_binary")

ng_module(
  name = "app",
  srcs = ["app.ts"],
  deps = ["//examples/angular/hello-world"],
)

ng_module(
  name = "main",
  srcs = ["main.ts"],
  deps = [":app"],
)

closure_ts_binary(
    name = "closure_compiled",
    deps = [":main"],
    defs = [
        "--jscomp_off=checkTypes",
    ],
)
