load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "label.go",
        "labeler.go",
        "resolve.go",
        "resolve_node_module.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@build_bazel_rules_typescript//tools/taze/config:go_default_library",
        "@org_golang_x_tools//go/vcs:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "labeler_test.go",
        "resolve_node_module_test.go",
        "resolve_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@build_bazel_rules_typescript//tools/taze/config:go_default_library",
        "@org_golang_x_tools//go/vcs:go_default_library",
    ],
)
