load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "construct.go",
        "doc.go",
        "generator.go",
        "sort_labels.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//tools/taze/config:go_default_library",
        "//tools/taze/packages:go_default_library",
        "//tools/taze/resolve:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@com_github_bazelbuild_buildtools//tables:go_default_library",
        "@org_golang_x_tools//go/vcs:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    size = "small",
    srcs = ["generator_test.go"],
    deps = [
        ":go_default_library",
        "//tools/taze/config:go_default_library",
        "//tools/taze/merger:go_default_library",
        "//tools/taze/packages:go_default_library",
        "//tools/taze/resolve:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
    ],
)
