load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "diff.go",
        "fix.go",
        "flags.go",
        "main.go",
        "print.go",
    ],
    deps = [
        "//tools/taze/config:go_default_library",
        "//tools/taze/merger:go_default_library",
        "//tools/taze/packages:go_default_library",
        "//tools/taze/resolve:go_default_library",
        "//tools/taze/rules:go_default_library",
        "//tools/taze/wspace:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@com_github_bazelbuild_buildtools//differ:go_default_library",
    ],
)

go_binary(
    name = "taze",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "fix_test.go",
        "integration_test.go",
    ],
    embed = [":go_default_library"],
)
